@@ -145,6 +145,7 @@ then
     INVALID_EDITOR_RPT=${CURRENTDIR}/`basename ${INVALID_EDITOR_RPT}`
     MULTIPLE_MCV_RPT=${CURRENTDIR}/`basename ${MULTIPLE_MCV_RPT}`
     MKR_TYPE_CONFLICT_RPT=${CURRENTDIR}/`basename ${MKR_TYPE_CONFLICT_RPT}`
+    GRPNG_TERM_RPT=${CURRENTDIR}/`basename ${GRPNG_TERM_RPT}`
     BEFORE_AFTER_RPT=${CURRENTDIR}/`basename ${BEFORE_AFTER_RPT}`
     RPT_NAMES_RPT=${CURRENTDIR}/`basename ${RPT_NAMES_RPT}`
 fi
@@ -163,7 +164,9 @@ fi
 #echo "INVALID_EDITOR_RPT:	${INVALID_EDITOR_RPT}"
 #echo "MULTIPLE_MCV_RPT:	${MULTIPLE_MCV_RPT}"
 #echo "MKR_TYPE_CONFLICT_RPT:	${MKR_TYPE_CONFLICT_RPT}"
+#echo "GRPNG_TERM_RPT:	${GRPNG_TERM_RPT}"
 #echo "BEFORE_AFTER_RPT: ${BEFORE_AFTER_RPT}"
+#echo " RPT_NAMES_RPT: ${ RPT_NAMES_RPT}"
 
 #
 # Initialize the log file.
@@ -175,7 +178,7 @@ touch ${LOG}
 #
 # Initialize the report files to make sure the current user can write to them.
 #
-RPT_LIST="${SANITY_RPT} ${INVALID_MARKER_RPT} ${SEC_MARKER_RPT} ${INVALID_TERMID_RPT} ${INVALID_JNUM_RPT} ${INVALID_EVID_RPT} ${INVALID_EDITOR_RPT}  ${MULTIPLE_MCV_RPT} ${MKR_TYPE_CONFLICT_RPT} ${BEFORE_AFTER_RPT} ${RPT_NAMES_RPT}"
+RPT_LIST="${SANITY_RPT} ${INVALID_MARKER_RPT} ${SEC_MARKER_RPT} ${INVALID_TERMID_RPT} ${INVALID_JNUM_RPT} ${INVALID_EVID_RPT} ${INVALID_EDITOR_RPT}  ${MULTIPLE_MCV_RPT} ${MKR_TYPE_CONFLICT_RPT} ${GRPNG_TERM_RPT} ${BEFORE_AFTER_RPT} ${RPT_NAMES_RPT}"
 
 for i in ${RPT_LIST}
 do
