@@ -99,13 +99,14 @@ INVALID_EVID_RPT=${RPTDIR}/invalid_evid.rpt
 INVALID_EDITOR_RPT=${RPTDIR}/invalid_editor.rpt
 MULTIPLE_MCV_RPT=${RPTDIR}/multiple_mcv.rpt
 MKR_TYPE_CONFLICT_RPT=${RPTDIR}/markertype_conflict.rpt
+GRPNG_TERM_RPT=${RPTDIR}/grouping_term.rpt 
 BEFORE_AFTER_RPT=${RPTDIR}/before_after.rpt
 RPT_NAMES_RPT=${RPTDIR}/reportsWithDiscrepancies.rpt
 
 export SANITY_RPT
 export INVALID_MARKER_RPT SEC_MARKER_RPT INVALID_TERMID_RPT 
 export INVALID_JNUM_RPT INVALID_EVID_RPT INVALID_EDITOR_RPT
-export MULTIPLE_MCV_RPT MKR_TYPE_CONFLICT_RPT
+export MULTIPLE_MCV_RPT MKR_TYPE_CONFLICT_RPT GRPNG_TERM_RPT
 export BEFORE_AFTER_RPT RPT_NAMES_RPT
 
 # Number of columns expected for the input file (for sanity check).
@@ -126,6 +127,11 @@ MCVLOAD_QC=${MCVLOAD}/bin/mcvQC.py
 MCVLOAD_QC_SH=${MCVLOAD}/bin/mcvQC.sh
 
 export MCVLOAD_QC MCVLOAD_QC_SC
+
+# set of grouping term ids for mcvQC.py
+GROUPING_TERMIDS="MCV:0000029, MCV:0000001"
+
+export GROUPING_TERMIDS
 
 # Complete path name of the mcvload log files
 LOG_FILE=${LOGDIR}/mcvload.log
