@@ -1,3 +1,9 @@
+TAG: mcvload-4-4-0-4
+DATE: 07/22/2010
+STAFF: sc
+CHANGES: 
+1) mcvload.config, mcvQC.sh/py - added new grouping terms report
+
 TAG: mcvload-4-4-0-3
 DATE: 07/21/2010
 STAFF: sc
